--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>${lombok}</version>
+                <version>1.18.30</version>
             </dependency>
 
             <dependency>
@@ -122,6 +122,14 @@
                 <artifactId>wechatpay-apache-httpclient</artifactId>
                 <version>0.4.8</version>
             </dependency>
+
+            <dependency>
+                <groupId></groupId>
+                <artifactId></artifactId>
+            </dependency>
+
+
+
         </dependencies>
     </dependencyManagement>
 </project>
